# dataclass_meta_argparse

./: .pre-commit-config.yaml  dataclass_meta_argparse.py  pyproject.toml
dataclass_meta_argparse/: __init__.py  decorator.py  metadata.py  str_utils.py  type_utils.py
dataclass_meta_argparse/plugins/: __init__.py  args_from_env.py  type_validation.py
dataclass_meta_argparse/utils/: partial_instance_method.py
examples/: basic_cli.py  complex_example.md
