[tool.poetry]
name = "dataclass_meta_argparse"
version = "0.1.0"
description = ""
authors = ["Tim Vergenz <vergenzt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
trycast = {version = "^1.0.0", optional = true}

[tool.poetry.extras]
typechecks = ["trycast"]

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
autopep8 = "^1.7.0"

[tool.autopep8]
max_line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
